# robond

./: .gitignore  README.md  add_markers.sh  pick_objects.sh  test_slam.sh
final_project/: README.md  home_service.launch  home_service.sh  pick_objects.sh  test_navigation.sh
final_project/images/: home_service.gv
final_project/src/add_markers/: CMakeLists.txt  package.xml
final_project/src/world/: test_building.world
images/: home_service.gv
project1/: CMakeLists.txt  README.md
project1/model/building1/: model.config  model.sdf
project1/model/robot/: model.config  model.sdf
project1/script/: hello_plugin.cpp
project1/world/: office.world
project2/: README.md
project2/ball_chaser/: CMakeLists.txt
project2/ball_chaser/launch/: ball_chaser.launch
project2/ball_chaser/src/: drive_bot.cpp  process_image.cpp
project2/my_robot/launch/: robot_description.launch  world.launch
project2/my_robot/urdf/: my_robot.xacro
project2/my_robot/worlds/: empty.world  office.world
project3/: README.md
project3/my_robot/launch/: amcl.launch  world.launch
project3/my_robot/maps/: office.yaml
project3/my_robot/worlds/: office.world
project4/: README.md
project4/my_robot/db/: rtabmap.db
project4/my_robot/launch/: localization.launch  mapping.launch  teleop.launch
project4/my_robot/maps/: map.pgm  map.yaml
project4/my_robot/rviz/: config_file.rviz
project4/my_robot/urdf/: my_robot.xacro
project4/my_robot/worlds/: office.world
src/add_markers/: CMakeLists.txt
src/add_markers/src/: add_markers_node.cpp
src/map/: test_map.pgm
src/pick_objects/: CMakeLists.txt
src/pick_objects/src/: pick_objects_node.cpp
src/world/: test_building.world
(+2 files in other folders)
